http client changes

--- a/HttpClient/src/app/http-view/http-view.component.html
+++ b/HttpClient/src/app/http-view/http-view.component.html
@@ -1,4 +1,4 @@
-<table border="solid" border-color="blue">
+<table border="solid">
     <tr *ngFor="let message of messageObject">
         <td>{{message.id}}</td>
         <td>{{message.title}}</td>
