Event input changes

--- a/EventInput/src/app/event-input/event-input.component.html
+++ b/EventInput/src/app/event-input/event-input.component.html
@@ -1,1 +1,2 @@
-<p (click)="changeName()">{{name}}</p>
+<p (click)="increaseInput()">{{name}}: {{numberOfInputs}}</p>
+<input type="text" (keydown)="increaseInput()">
