--- a/FormValidation/src/app/app.component.html
+++ b/FormValidation/src/app/app.component.html
@@ -1,3 +1,5 @@
+<html>
+    <main class="content"><span>{{title}} app is running!</span>
 <h1>Form validation</h1>
 
-<app-user></app-user>
+<app-user></app-user></main></html>
