--- a/HttpClient/src/app/http-view/http-view.component.html
+++ b/HttpClient/src/app/http-view/http-view.component.html
@@ -1,7 +1,7 @@
 <table border="solid">
     <tr *ngFor="let message of messageObject">
         <td>{{message.id}}</td>
-        <td>{{message.title}}</td>
+        <td>{{message.name}}</td>
     </tr>
 
 </table>
