--- a/FormValidation/src/app/user/user.component.html
+++ b/FormValidation/src/app/user/user.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="userForm" #formDir="ngForm">
+<form [formGroup]="userForm" #form="ngForm">
 
 <input type="text" formControlName="name" />
 
